Add image view to recipes

--- a/app/src/main/res/layout/adapter_recipe.xml
+++ b/app/src/main/res/layout/adapter_recipe.xml
@@ -4,61 +4,82 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:focusable="true"
+        android:layout_height="200dp"
         android:clickable="true"
-        android:background="?android:selectableItemBackground">
+        android:layout_margin="8dp"
+        android:focusable="true">
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent" >
 
-            <TextView
-                style="@style/TextAppearance.Material3.TitleMedium"
-                android:id="@+id/text_letter"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="8dp"
-                android:gravity="center"
-                android:text="D"
-                android:background="@drawable/ic_circle"
-                />
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"
+                android:src="@drawable/recipe_preview"/>
 
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:padding="8dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/text_recipe"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                    style="@style/TextAppearance.Material3.TitleMedium"
+                    android:visibility="gone"
+                    android:id="@+id/text_letter"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:text="D"
+                    android:background="@drawable/ic_circle"
                     />
 
-                <TextView
-                    android:id="@+id/text_recipe_sub"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                    />
+                    android:padding="16dp">
+
+                    <TextView
+                        style="@style/TextAppearance.Material3.BodySmall"
+                        android:id="@+id/text_recipe_sub"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Dessert"
+                        android:layout_marginBottom="4dp"
+                        />
+
+                    <TextView
+                        style="@style/TextAppearance.Material3.TitleMedium"
+                        android:id="@+id/text_recipe"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Tarte tatin"
+                        />
+                </LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/button_more"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="16dp"
+                    android:src="@drawable/ic_more"
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:visibility="gone"/>
+
+
             </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/button_more"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="16dp"
-                android:src="@drawable/ic_more"
-                android:background="?selectableItemBackgroundBorderless"
-                android:visibility="gone"/>
         </LinearLayout>
-    </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+
 </LinearLayout>
