--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -90,6 +90,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:clipToPadding="false"
+                android:padding="8dp"
                 android:id="@+id/recycler_view_recipe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
