--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -26,121 +26,137 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/recipe_title"
                 android:text=""
                 style="@style/TextAppearance.Material3.HeadlineLarge"
-                android:layout_margin="8dp"
+                android:layout_margin="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/recipeType"
-                android:text=""
+            <ImageView
+                android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="184dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/recipe_preview"/>
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_portions"
-                android:visibility="gone"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                app:strokeWidth="0dp"
-                app:cardBackgroundColor="?attr/colorSurfaceContainerLow">
+                android:padding="8dp">
 
-                <LinearLayout
+
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/recipeType"
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/card_portions"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp">
-
-                    <TextView
-                        style="@style/TextAppearance.Material3.TitleMedium"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_weight="1"
-                        android:text="@string/label_portions" />
+                    android:layout_margin="8dp"
+                    app:strokeWidth="0dp"
+                    app:cardBackgroundColor="?attr/colorSurfaceContainerLow">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <Button
-                            style="?attr/materialIconButtonFilledStyle"
-                            android:id="@+id/button_less"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            app:icon="@drawable/ic_remove" />
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp">
 
                         <TextView
                             style="@style/TextAppearance.Material3.TitleMedium"
-                            android:id="@+id/text_portions"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
-                            android:text="4" />
+                            android:layout_weight="1"
+                            android:text="@string/label_portions" />
 
-                        <Button
-                            android:id="@+id/button_more"
-                            style="?attr/materialIconButtonFilledStyle"
+                        <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            app:icon="@drawable/ic_add" />
+                            android:layout_height="wrap_content">
+
+                            <Button
+                                style="?attr/materialIconButtonFilledStyle"
+                                android:id="@+id/button_less"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="8dp"
+                                app:icon="@drawable/ic_remove" />
+
+                            <TextView
+                                style="@style/TextAppearance.Material3.TitleMedium"
+                                android:id="@+id/text_portions"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="8dp"
+                                android:text="4" />
+
+                            <Button
+                                android:id="@+id/button_more"
+                                style="?attr/materialIconButtonFilledStyle"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="8dp"
+                                app:icon="@drawable/ic_add" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
+                </com.google.android.material.card.MaterialCardView>
+
+
+
+                <LinearLayout
+                    android:id="@+id/card_ingredients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_ingredient"
+                        style="@style/TextAppearance.Material3.TitleMedium"
+                        android:layout_margin="8dp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_ingredients"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
                 </LinearLayout>
 
-            </com.google.android.material.card.MaterialCardView>
 
 
-
-            <LinearLayout
-                android:id="@+id/card_ingredients"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
+                <LinearLayout
+                    android:id="@+id/card_steps"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_ingredient"
-                    style="@style/TextAppearance.Material3.TitleMedium"
-                    android:layout_margin="8dp" />
+                    android:orientation="vertical">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view_ingredients"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_steps"
+                        style="@style/TextAppearance.Material3.TitleMedium"
+                        android:layout_margin="8dp" />
 
-            </LinearLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_steps"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-
-
-            <LinearLayout
-                android:id="@+id/card_steps"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_steps"
-                    style="@style/TextAppearance.Material3.TitleMedium"
-                    android:layout_margin="8dp" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view_steps"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                </LinearLayout>
 
             </LinearLayout>
 
