--- a/app/src/main/res/layout/activity_wizard.xml
+++ b/app/src/main/res/layout/activity_wizard.xml
@@ -92,6 +92,14 @@
                 android:layout_weight="1"
                 android:layout_margin="8dp">
 
+                <ImageView
+                    android:id="@+id/image_preview"
+                    android:layout_margin="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="184dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/recipe_preview"/>
+
                 <com.google.android.material.textfield.TextInputLayout
                     style="?attr/textInputFilledStyle"
                     android:layout_width="match_parent"
