--- a/app/src/main/res/layout/adapter_list.xml
+++ b/app/src/main/res/layout/adapter_list.xml
@@ -4,41 +4,37 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="24dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_height="24dp" />
+
+        <TextView
+            android:id="@+id/text_item"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_weight="1"
+            android:text="Item"
+            android:layout_gravity="top"
+            android:layout_margin="4dp"
+            android:paddingStart="4dp"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
 
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/checkbox"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="8dp"/>
+        <ImageButton
+            android:id="@+id/button_close"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="4dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_close" />
 
-            <TextView
-                android:id="@+id/text_item"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Item"
-                android:layout_gravity="top"
-                android:layout_margin="8dp"
-                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
-
-            <ImageButton
-                android:id="@+id/button_close"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="8dp"
-                android:background="?selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_close" />
-
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 </LinearLayout>
